--- a/Test_MindeeApi/Test_MindeeApi.csproj
+++ b/Test_MindeeApi/Test_MindeeApi.csproj
@@ -13,6 +13,7 @@
 </ItemGroup>
     <ItemGroup>
       <PackageReference Include="Microsoft.Extensions.Hosting" Version="10.0.0-preview.5.25277.114" />
+      <PackageReference Include="Microsoft.Extensions.Http" Version="10.0.0-preview.5.25277.114" />
       <PackageReference Include="Mindee" Version="3.28.0" />
       <PackageReference Include="RestSharp" Version="112.1.0" />
       <PackageReference Include="Serilog" Version="4.3.1-dev-02373" />
