--- a/Test_MindeeApi/Test_MindeeApi.csproj
+++ b/Test_MindeeApi/Test_MindeeApi.csproj
@@ -5,6 +5,7 @@
         <TargetFramework>net9.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     </PropertyGroup>
 <ItemGroup>
   <None Update="appsettings.json">
@@ -21,6 +22,11 @@
       <PackageReference Include="Serilog.Sinks.File" Version="7.0.0" />
       <PackageReference Include="Telegram" Version="1.0.1" />
       <PackageReference Include="Telegram.Bot" Version="22.5.2-dev.6" />
+    </ItemGroup>
+    <ItemGroup>
+      <Content Include="..\.dockerignore">
+        <Link>.dockerignore</Link>
+      </Content>
     </ItemGroup>
 
 </Project>
